working version with new data model API 0.1.0
