# src/app/models.ts
@@ -1,3 +1,4 @@
 export { joueur } from './models/joueur';
 export { match } from './models/match';
+export { matchDetailJoueur } from './models/match-detail-joueur';
 export { Error } from './models/error';
